<resources>
    <string name="app_name">Garantiator</string>

    <!--Dashboard-->
    <string name="mis_garantias_text">Mis Garantías</string>
    <string name="add_garantia_text">Añadir Garantía</string>
    <string name="settings_text">Ajustes</string>
    <string name="info_text">Información</string>

    <!--Add garantia Activity-->
    <string name="toolbar_title_form_add">Añadir Garantía</string>
    <string name="cab_form_add">Rellene el formulario para añadir una nueva
            garantía a su registro de garantías.</string>
    <string name="product_tipo_form_add">Tipo de producto</string>
    <string name="product_marca_form_add">Marca del producto</string>
    <string name="product_modelo_form_add">Modelo del producto</string>
    <string name="local_form_add">Lugar de compra</string>
    <string name="fecha_compra_form_add">Fecha de compra</string>
    <string name="btn_fecha_form_add">Seleccionar</string>
    <string name="text_dur_garantia_form_add">Duración de la garantía: </string>
    <string name="text_siguiente_form_add">Tome una foto de su garantía</string>
    <string-array name="array_spn_dur_garantia">
        <item>1 año</item>
        <item>2 años</item>
        <item>3 años</item>
        <item>4 años</item>
    </string-array>

    <!--camera-->
    <string name="txt_foto_camera">Tomar Foto</string>
    <string name="toolbar_title_camera_activity">Añadir Garantía</string>
    <string name="action_ok">Finalizar</string>


    <!--validación del formulario-->
    <string name="campo_tipoProducto_vacio">El campo tipo de producto es obligatorio</string>
    <string name="campo_marca_vacio">El campo marca del producto es obligatorio</string>
    <string name="campo_modelo_vacio">El campo modelo del producto es obligatorio</string>
    <string name="campo_lugar_vacio">El campo lugar de compra es obligatorio</string>
    <string name="campo_fecha_vacio">El campo fecha de compra es obligatorio</string>


    <!--settings-->
    <string name="toolbar_title_settings">Ajustes</string>
    <string name="notificaciones_settings">Mostrar notificaciones</string>
    <string name="silenciar_settings">Silenciar</string>
    <string name="actualizaciones_settings">Recibir actualizaciones</string>
    <string name="language_settings">Elegir idioma: </string>
    <string-array name="spn_language">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

    <!--information-->
    <string name="toolbar_title_info">Información</string>
    <string name="designedBy_info">DESIGNED BY</string>
    <string name="nom1_info">Vasil Slavov Hristov</string>
    <string name="nom2_info">Manuel Martínez Alonso</string>
    <string name="nom3_info">Miguel Ángel Real Mañó</string>

    <!--Mis garantías-->
    <string-array name="array_viewpager">
        <item>Listado</item>
        <item>Calendario</item>
        <item>Proveedores</item>
    </string-array>

</resources>
