<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.atmosfera.garantias.controllers.activities.InfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#009688"
        android:minHeight="?attr/actionBarSize">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"

        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/designedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/designedBy_info"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/nom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/nom1_info"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/nom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/nom2_info"
            android:textAlignment="center"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/nom3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:text="@string/nom3_info"
            android:textAlignment="center"
            android:textSize="35sp" />


    </LinearLayout>

</RelativeLayout>
